# CMPE322-OS-Scheduler

./: .gitignore  2016400141.zip.ots  CMakeLists.txt  README.md  build.sh  bundle.sh  main.cpp  run.sh  test.sh
Report_Documentation/: Documentation.md  Report.md
src/: instruction.cpp  instruction.h  instructionReader.cpp  instructionReader.h  process.cpp  process.h  processReader.cpp  processReader.h  processScheduler.cpp  processScheduler.h  readyQueue.cpp  readyQueue.h  simulation.cpp  simulation.h
